tests/error/main_without_ending_closed_curly.c
// fail "Unmatched '{' at global scope."
char main(){
